@@ -660,8 +660,6 @@ static int handle_task(sge_gdi_ctx_class_t *ctx, lListElem *petrep, char *commpr
 
    DENTER(TOP_LAYER, "handle_task");
 
-   petep = lCreateElem(PET_Type);
-
 #ifdef KERBEROS
    if (krb_verify_user(de->host, de->commproc, de->id,
                        lGetString(petrep, PETR_owner)) < 0) {
@@ -710,6 +708,7 @@ static int handle_task(sge_gdi_ctx_class_t *ctx, lListElem *petrep, char *commpr
    tid = MAX(1, lGetUlong(jatep, JAT_next_pe_task_id));
    sprintf(new_task_id, "%d.%s", tid, unqualified_hostname);
    DPRINTF(("using pe_task_id_str %s for job "sge_u32"."sge_u32"\n", new_task_id, jobid, jataskid));
+   petep = lCreateElem(PET_Type);
    lSetString(petep, PET_id, new_task_id);
 
    /* set taskid for next task to be started */
@@ -738,6 +737,7 @@ static int handle_task(sge_gdi_ctx_class_t *ctx, lListElem *petrep, char *commpr
       if (gdil == NULL) {  /* also no already exited task found -> no way to start new task */
          ERROR((SGE_EVENT, MSG_JOB_NOFREEQ_USSS, sge_u32c(jobid), 
                 lGetString(petrep, PETR_owner), host, qualified_hostname));
+         lFreeElem(&petep);
          goto Error;
       }
    }
@@ -795,6 +795,10 @@ static int handle_task(sge_gdi_ctx_class_t *ctx, lListElem *petrep, char *commpr
    DRETURN(0);
 
 Error:
+   /* JG: TODO: The petep might have got appended to the ja_task's JAT_task_list.
+    *           We should better dechain and destroy it.
+    *           See issue GE-3461.
+    */
    /* send nack to sender of task */
    DPRINTF(("sending nack\n")); 
    packstr(apb, "none");    
