@@ -34,7 +34,12 @@
 
 umask  022
 
-TAR=tar
+if [ $? -eq 0 ]; then
+   TAR=gtar
+else
+   TAR=tar
+fi
+
 BASEDIR=/tmp/sge6_dist
 
 RPMSPECFILE=sge.spec
