@@ -8,11 +8,16 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+JG-2011-05-05-0: Bugfix:      fixed a memory leak in sge_execd when pe task
+                              requests got rejected
+                 Enhancem.:   minor enhancements in build/distinst/mk_dist
+                 Review:      HP
+
 EB-2011-05-03-1: Bugfix:      large entries in group DB might cause
                               sge_group2gid() to fail
                  Issue:       GE-3462
                  Review:      DG
-                              
+
 EB-2011-05-03-0: Enhancem.:   Added new JSV that rejects all jobs.
                  Issue:       GE-3446
 
